fix: enable text wrapping for shipping danger state on mobile devices

--- a/src/scss/product-page/header.scss
+++ b/src/scss/product-page/header.scss
@@ -329,6 +329,10 @@
         line-height: normal;
         width: fit-content;
         text-wrap: nowrap;
+
+        @media screen and (max-width: 1023px) {
+          text-wrap: wrap;
+        }
        
         svg {
           width: 20px;
